<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>mainWindow</class>
 <widget class="QMainWindow" name="mainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1372</width>
    <height>570</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Loan Search</string>
  </property>
  <property name="styleSheet">
   <string notr="true">QWidget {
	background-color: #fbfbfb;
}

QTableView {
	background-color: #f1f1f1;
	border: 1px solid transparent;
	border-radius: 10px;
}

QPushButton {
    background-color: #0077c2;
    color: white;
    border: 1px solid transparent;
    border-radius: 10px;
    padding: 5px 10px;
}

QPushButton:hover {
    border: 1px solid white;
}

QPushButton:pressed {
    background-color: #005f9e;
    padding-top: 6px;
    padding-bottom: 4px;
}

QPushButton:disabled {
    background-color: lightgray;
    color: gray;
    border: 1px solid gray;
}
</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QPushButton" name="searchButton">
    <property name="geometry">
     <rect>
      <x>350</x>
      <y>10</y>
      <width>111</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Arial Black</family>
      <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton {
    background-color: #0077c2;
    color: white;
    border: 1px solid transparent;
    border-radius: 10px;
    padding: 5px 10px;
}

QPushButton:hover {
    border: 1px solid white;
}

QPushButton:pressed {
    background-color: #005f9e;
    padding-top: 6px;
    padding-bottom: 4px;
}

QPushButton:disabled {
    background-color: lightgray;
    color: gray;
    border: 1px solid gray;
}
</string>
    </property>
    <property name="text">
     <string>Search</string>
    </property>
   </widget>
   <widget class="QTableView" name="overdueLoanTable">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>65</y>
      <width>1351</width>
      <height>471</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Arial Black</family>
      <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
   </widget>
   <widget class="QLineEdit" name="customerName">
    <property name="geometry">
     <rect>
      <x>150</x>
      <y>20</y>
      <width>191</width>
      <height>31</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Arial Black</family>
      <pointsize>12</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit {
    border: none;
    border-bottom: 1px solid black;
    background-color: transparent;
    color: black;
}

QLineEdit:disabled {
    border: none;
    border-bottom: 1px solid lightgray;
    background-color: lightgray;
    color: lightgray;
}
</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_22">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
      <width>131</width>
      <height>41</height>
     </rect>
    </property>
    <property name="minimumSize">
     <size>
      <width>110</width>
      <height>0</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
      <width>16777215</width>
      <height>16777215</height>
     </size>
    </property>
    <property name="font">
     <font>
      <family>Arial Black</family>
      <pointsize>9</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color:rgb(241, 241, 241);
border: 1px solid #ef9a9a;
border-radius: 10px;</string>
    </property>
    <property name="frameShape">
     <enum>QFrame::Box</enum>
    </property>
    <property name="text">
     <string>Customer Name</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
 </widget>
 <tabstops>
  <tabstop>customerName</tabstop>
  <tabstop>overdueLoanTable</tabstop>
  <tabstop>searchButton</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
